react-app/src/components/Navigation/Navigation.css
.profile-dropdown {
  position: absolute;
  right: 15px;
  background-color: rgba(238, 238, 238, 1);
  list-style: none;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-right: 10px;
  padding-left: 10px;
  z-index: 1;
  border-radius: 5px;

}

.profile-dropdown > li {
  margin-left: 25px;
  padding: 5px;
}

.hidden {
  display: none;
}

.nav-list{
  display: flex;
  flex-direction: column;
  row-gap: 25px;
  list-style: none;
  align-items: center;
  margin-left: -40px;
}
.nav-list-top-wrapper, .nav-list-bottom-wrapper{
  display: flex;
  flex-direction: column;
  row-gap: 10px;
}

.nav-list-item{
  width: fit-content;
  display: flex;
  align-self: center;
  justify-self: center;
}

.nav-list-item > a{
  text-decoration: none;
  color: rgba(238, 238, 238, 1);
  width: fit-content;
  align-self: center;
  justify-self: center;
}

.user-icon-button{
  background-color: transparent;
  border: none;
}

.user-icon-button > i {
  color: rgba(238, 238, 238, 1);
}

.dropdown-item {
  color: black;
  margin-top: 5px;
  margin-right: 15px;
}

.nav-list-item-nav-link{
  display: flex;
  align-items: center;
}

.nav-list-item-nav-link > img{
  width: 50px;
  height: 50px;
}

.dropdown-logout {
  display: flex;
  align-items: center;
  padding: 10px 20px;
  border: none;
  margin-left: 25px;
  /* left: 10px; */
  border-radius: 20px;
  background-color: #06660b7c;
  color: #ffffff;
  font-size: 1em;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.dropdown-logout:hover {
  background-color: #06660bfd;
}

.dropdown-login {
  display: flex;
  align-items: center;
  padding: 10px 20px;
  border: none;
  margin-left: 10px;
  /* left: 10px; */
  border-radius: 20px;
  background-color: #06660b7c;
  color: #ffffff;
  font-size: 1em;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.dropdown-login:hover {
  background-color: #06660bfd;
}

.dropdown-signup {
  display: flex;
  justify-self: center;
  align-items: center;
  padding: 10px 20px;
  border: none;
  margin-top: 10px;
  margin-left: 5px;
  margin-right: 5px;
  /* left: 10px; */
  border-radius: 20px;
  background-color: #06660b7c;
  color: #ffffff;
  font-size: 1em;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.dropdown-signup:hover {
  background-color: #06660bfd;
}

/* .fa-circle-user{
  cursor: pointer;
} */

